hard-gists/5610068/run.log
=== Docker Run Log for 5610068 ===
Started at: Mi 29. Okt 15:47:02 CET 2025

[2025-10-29 15:47:03] START: Running container for 5610068
[2025-10-29 15:47:03] SUCCESS: Container f39aa0f6675588d24f979b2779bdd0679229031c3f9145ee9b38795983ac0327 started for 5610068
=== Container logs for 5610068 ===
  File "/snippet.py", line 40
    print "%s" % plaintext
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5610068 ===
[2025-10-29 15:47:05] INFO: Container f39aa0f6675588d24f979b2779bdd0679229031c3f9145ee9b38795983ac0327 has stopped
